--- a/pages/personal.html
+++ b/pages/personal.html
@@ -1,17 +1,38 @@
 ---
-layout: personal
-permalink: /personal.html
-title: Personal
-description: 
+layout: page
+permalink: personal.html
+title: 
 header-img:  
 last-updated: 2020-10-30 5:55 PM
 ---
-
 {% assign theme = site.data.themes[site.ui_theme] %}
-<!-- Page Content -->
-<!-- Current Projects -->
+
 <div class="blogcard mb-4" style="width: 100%;">
-  <div class="card-body">
-    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">{{page.title}}</h5>
+    <div class="card-body">
+      <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">Aagam's Travels</h5>
+    </div>
   </div>
-</div>
+  <h5 class="card-title text-left" style="font-size:{{ theme.post-tag-size }};"> This is a map containing the non-exhaustive list of places that I have been to so far.  </h5>
+  <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1K2rZWR7KrMs1S3KOGCaRCWah4ei8nfg&ehbc=2E312F" width="100%" height="480"></iframe>
+
+  <h4> <br> </h4>
+
+  <div class="blogcard mb-4" style="width: 100%;">
+    <div class="card-body">
+      <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">Mostly Functional Prints</h5>
+    </div>
+  </div>
+
+  <ul class="list-unstyled">
+    {% for 3dprint in site.data.3dprints %}
+    <li class="media">
+      <img src={{3dprint.image}} class="mr-3" style="width: 25%;">
+      <div class="media-body">
+        <h5 class="mt-0 mb-1">{{3dprint.name}}</h5>
+        {{3dprint.description}} <br>
+        <a class="btn btn-primary btn-md" href={{3dprint.cad_files}} target="_blank" role="button" style="background-color:#648DE5;color:#FFFFFF">CAD Files</a>
+      </div>
+    </li>
+    <br>
+    {% endfor %}
+  </ul>
