Updated description of Past Projects page

--- a/pages/pastprojects.html
+++ b/pages/pastprojects.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /pastprojects.html
 title: Past Projects
-description: I write about cyber threat intelligence
+description: Projects that I have worked on in the past.
 header-img:  
 last-updated: 2020-10-30 5:55 PM
 ---
